lab1/Test/L1-A-10-90.output
Error Type A at Line 5
Error Type A at Line 21
Error Type B at Line 30
Error Type B at Line 31
Error Type A at Line 45
Error Type A at Line 46
Error Type A at Line 50
