lab1/Test/L1-A-10-90.cmm
int WQlG1G49yT ( float EIPItx0MqG ) {
  struct t3Sh7JKHjonvBi4ZJp1 F6MABveFtGf_WCv [ 1294908022 
    ] = sRg8ENHpxISvz1KnBZd3 , CTaO5Qg ;
  return W8XCe27oZ = FVZXpxu9EG || SaJIOWI7mAJjOt1kaT86 
    && qaPBg31 >= JOXhiDrX6dyr + CBZ5EEa4 * - ~u8DnOW 
    [ Hc <= S - kbKnIiRi3LAc ( pRYadnqIJJoCejAa0Jc = kTTe3CrWXTtYr6BgUg4 
    == GiSSj1q - vsBOzyd6 / I7TY7fy1Y ( NrMOFmv7MlsP1zLkBe50 
    > ! Yb6wwigRQfTRUxmN0mzo [ eRPI5FaXyN < vt_9EkltdvCEj70U8mRK 
    - S8zkjagAVB9 / ( Cjrp1ADlQ0mjZYc3Jo ) ] != pW . OCy 
    * ! - - 441076020.2020150615 ) , - ! ! k3mKODJpJ0RCD 
    ( ) ) ] / - ! 248034907 . md_Xs9BC7qq3l9Edqc ;
}
int ;
int ;
struct {
  struct Qe5f {
    int e7ct ;
    int E1vyFrY7Cr ;
    int tVBGE ;
    struct FE6Fsol772frubC4W5j mwg5I5wk56YhzO ;
  }:VvY ;
}d , E2AoQ1 

;
int B90xfgSKl ( ) {
}
int ;
int ;
int ;
1712924180.1504690437 int ;
!= int ImUj ( int Olt_QkV , int uWjZkOQHm2_1mI_ ) 
  {
}
int f7mMCv6xabuNnJPhaNQD ( ) {
}
int ;
int LkCjgfqSfC7I9BhHHbl ( ) {
  if ( zM9nrFIEKHi3PN5WaYtI )   {
    _QWUK ;
    if ( mSEjeEzCwQ4I0QXcPC )     aUftnZP1b ;
else     while ( xx5tQFC571MjL5mLJLJ )     YuzAjU6f79Wa7Rq 
      ;


  }~
else   if ( #_oLG33gOhAhp6R )   Egad ;


}
\